part2/ex108/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-todo
spec:
  selector:
    matchLabels:
      app: kube-todo
  template:
    metadata:
      labels:
        app: kube-todo
    spec:
      containers:
      - name: kube-todo
        image: deeq/kube-todo:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
